Spacing on bottom fixed

--- a/css/index.css
+++ b/css/index.css
@@ -226,7 +226,7 @@ button {
 }
 
 .bottom-content2 {
-    padding-top: 10px;
+    padding-top: 50px;
     padding-bottom: 5px;
 }
 .text-container2 h4 {
